--- a/app/07-etcd/etcd-playbook.yml
+++ b/app/07-etcd/etcd-playbook.yml
@@ -1,15 +1,17 @@
 - hosts: controllers
   remote_user: root
+  vars:
+    etcd_version: "{{ lookup('env','ETCD_VERSION') }}"
   tasks:
   - name: Unarchive etcd
     unarchive:
-      src: https://github.com/coreos/etcd/releases/download/v3.2.11/etcd-v3.2.11-linux-amd64.tar.gz
+      src: https://github.com/coreos/etcd/releases/download/{{ etcd_version }}/etcd-{{ etcd_version }}-linux-amd64.tar.gz
       dest: /root
       remote_src: yes
   - name: Move etcd bin
-    command: mv /root/etcd-v3.2.11-linux-amd64/etcd /usr/local/bin/
+    command: mv /root/etcd-{{ etcd_version }}-linux-amd64/etcd /usr/local/bin/
   - name: Move etcdctl bin
-    command: mv /root/etcd-v3.2.11-linux-amd64/etcdctl /usr/local/bin/
+    command: mv /root/etcd-{{ etcd_version }}-linux-amd64/etcdctl /usr/local/bin/
   - name: Creates directory /etc/etcd
     file: path=/etc/etcd state=directory
   - name: Creates directory /var/lib/etcd
