--- a/app/09-kubelet/kubelet-playbook.yml
+++ b/app/09-kubelet/kubelet-playbook.yml
@@ -1,5 +1,9 @@
 - hosts: workers
   remote_user: root
+  vars:
+    cni_plugins_version: "{{ lookup('env','CNI_PLUGINS_VERSION') }}"
+    cri_containerd_version: "{{ lookup('env','CRI_CONTAINERD_VERSION') }}"
+    kubectl_version: "{{ lookup('env','KUBECTL_VERSION') }}"
   tasks:
   - name: Creates directory /etc/cni/net.d
     file: path=/etc/cni/net.d state=directory
@@ -15,27 +19,27 @@
     file: path=/var/run/kubernetes state=directory
   - name: Unarchive cni-plugins
     unarchive:
-      src: https://github.com/containernetworking/plugins/releases/download/v0.6.0/cni-plugins-amd64-v0.6.0.tgz
+      src: https://github.com/containernetworking/plugins/releases/download/{{ cni_plugins_version }}/cni-plugins-amd64-{{ cni_plugins_version }}.tgz
       dest: /opt/cni/bin/
       remote_src: yes
   - name: get cri-containerd
     unarchive:
-      src: https://github.com/kubernetes-incubator/cri-containerd/releases/download/v1.0.0-beta.0/cri-containerd-1.0.0-beta.0.linux-amd64.tar.gz
+      src: https://github.com/kubernetes-incubator/cri-containerd/releases/download/v{{ cri_containerd_version }}/cri-containerd-{{ cri_containerd_version }}.linux-amd64.tar.gz
       dest: /
       remote_src: yes
   - name: get kubectl
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/v1.9.0/bin/linux/amd64/kubectl
+      url: https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubectl
       dest: /usr/local/bin/kubectl
       mode: 0700
   - name: get kube-proxy
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/v1.9.0/bin/linux/amd64/kube-proxy
+      url: https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kube-proxy
       dest: /usr/local/bin/kube-proxy
       mode: 0700
   - name: get kubelet
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/v1.9.0/bin/linux/amd64/kubelet
+      url: https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubelet
       dest: /usr/local/bin/kubelet
       mode: 0700
   - name: copy ca cert
