--- a/app/09-kubelet/kubelet-playbook.yml
+++ b/app/09-kubelet/kubelet-playbook.yml
@@ -3,7 +3,7 @@
   vars:
     cni_plugins_version: "{{ lookup('env','CNI_PLUGINS_VERSION') }}"
     containerd_version: "{{ lookup('env','CONTAINERD_VERSION') }}"
-    kubectl_version: "{{ lookup('env','KUBECTL_VERSION') }}"
+    kube_version: "{{ lookup('env','KUBE_VERSION') }}"
   tasks:
   - name: Creates directory /etc/cni/net.d
     file: path=/etc/cni/net.d state=directory
@@ -19,7 +19,7 @@
     file: path=/var/run/kubernetes state=directory
   - name: Unarchive cri Tools
     unarchive:
-      src: https://github.com/kubernetes-incubator/cri-tools/releases/download/v1.0.0-beta.0/crictl-v1.0.0-beta.0-linux-amd64.tar.gz
+      src: https://github.com/kubernetes-incubator/cri-tools/releases/download/v1.12.0/crictl-v1.12.0-linux-amd64.tar.gz
       dest: /usr/local/bin/
       remote_src: yes 
   - name: Unarchive runsc
@@ -44,17 +44,17 @@
       remote_src: yes
   - name: get kubectl
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubectl
+      url: https://storage.googleapis.com/kubernetes-release/release/{{ kube_version }}/bin/linux/amd64/kubectl
       dest: /usr/local/bin/kubectl
       mode: 0700
   - name: get kube-proxy
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kube-proxy
+      url: https://storage.googleapis.com/kubernetes-release/release/{{ kube_version }}/bin/linux/amd64/kube-proxy
       dest: /usr/local/bin/kube-proxy
       mode: 0700
   - name: get kubelet
     get_url:
-      url: https://storage.googleapis.com/kubernetes-release/release/{{ kubectl_version }}/bin/linux/amd64/kubelet
+      url: https://storage.googleapis.com/kubernetes-release/release/{{ kube_version }}/bin/linux/amd64/kubelet
       dest: /usr/local/bin/kubelet
       mode: 0700
   - name: copy ca cert
