Add delay, socat on nodes, proper destroy

--- a/app/09-kubelet/kubelet-playbook.yml
+++ b/app/09-kubelet/kubelet-playbook.yml
@@ -86,6 +86,10 @@
       mode: 0744
   - name: Generate kubelet... conf
     command: /root/gen-kubelet-conf.sh
+  - name: Install socat on nodes
+    apt:
+      name: socat
+      update_cache: yes
   - name: Reload systemd
     command: systemctl daemon-reload
   - name: Enable containerd kubelet kube-proxy
